--- a/FrontEnd/my-app/package.json
+++ b/FrontEnd/my-app/package.json
@@ -6,13 +6,19 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/d3": "^6.3.0",
     "@types/jest": "^26.0.22",
     "@types/node": "^12.20.7",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
+    "@types/sass": "^1.16.0",
+    "d3": "^6.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "rechart": "^0.0.1",
+    "recharts": "^2.0.9",
+    "sass": "^1.32.8",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.1"
   },
